Fixed overflow for step dialog content. [HFJ-1257]

--- a/impress-editor.css
+++ b/impress-editor.css
@@ -205,6 +205,7 @@
   padding: 1em;
   box-sizing: border-box;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .h5p-impresspresentation-editor .h5p-mode-container {
